k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-msa-hw1
  labels:
    app: ym-otus-msa-hw1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ym-otus-msa-hw1
  template:
    metadata:
      labels:
        app: ym-otus-msa-hw1
    spec:
      containers:
        - name: otus-msa-hw1
          image: yakovmm/otus-msa-hw1:v1
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /probe/live
              port: 8000
            initialDelaySeconds: 25
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /probe/ready
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
